--- a/publicgoods.html
+++ b/publicgoods.html
@@ -3,6 +3,7 @@
   <head>
     <title>Public Goods</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -40,11 +41,40 @@
     </div>
 
     <div>
-      <img style="width: 100%; padding: 5%;" src="https://previews.dropbox.com/p/thumb/AA80HiULHYg8keDiWOwfK2DHcmz93uP4EsWcL77OR1u0gnBBXA1ZMtQ-b5j81sIp4bn-pYCQKCDBjM6QIYoExREFYQPyWthDcPKZQvQno3ItMC16gYx5UsxD-MDSysIxdpeyOh06voIbA_0B2DSXzuIZ418t1c3v3Odo0kHXFEqpdaXDysL-w_6PRTEJeE7uOSM9S3A2VtiLUDGm93hXgljk7qJzBX7xZiR1YlTPNhTaCKg8-e6iyxgb4MbGEorHW9jw2jHrX0H7jrDIlkczHP_YcAE6OnXBr_g2hR3XBBnQXZp4kzPNWcNhum04tBk45c1sTasCvN6TaGuj8wIgiLnrxyJ9yFHQreFWXoa2Fq6t3Q/p.png?size=2048x1536&size_mode=3">
+      
 
-    <div>
-      <img style="width: 49%; padding: 5%;" src="https://previews.dropbox.com/p/thumb/AA9TtYy7ZmOgi5_oZ5ViTRz1eUJKKtJ3ZAunI8VAf20BLdQqwZO6Ve1GIAcz3iDn5Gts8EVxMpULvQMWxwusA6otlafTtEskx1_QYWoZWtCtjKyI_febvkpISmjhC8DD_R6ccUCM91X1WekMPBZ7la6HjjzzGM9uiiSH7cLrfxbHHpX_M5KCfzf6VXa-V7drQvXy-YVP6SJTEvIzdNRn8MyDJi86OK0Izzg2uxMUECnlc1CaGoyF_zQSVLxXunnZRA3GtuaLR-eFxiEY93XWOHdauwEyYFh2c3n62Ro4btJ4U2RjcBgGm8KCG56uBuo1XnIlpe8AG5lltpJfArbvpwpwyoNjUwoYpGnngRV5w7EgXw/p.png?size=2048x1536&size_mode=3">
-      <img style="width: 50%; padding: 5%;" src="https://previews.dropbox.com/p/thumb/AA8z120GEsezXBj9LIK0dTsCfRLw4sPMYM69qbhTQBIMIpGVNDVXPm25eiwBelOy0kE8zKfJF7U8lW7IDDmT9JExn86c1JMdao0pBsl2SKv0yMKL2BBFUQ_dg2un_h0prCbF6NSEa3IxtdXU5wkaYOW_ncBiHtzfEhEhZgMojzAAdinWLUdRgCgyzhFOaMREmRFjfk5Jf5GReCNy2A3RxQJoifjoTt8TAJG6z5Mg56F0pxZof1VXk9HKQ3bc5IpArQQa8oCnxcxrZet4vp4inYeczvMdAp_6uLN1gcyQyeqhAcXZZQUKXiWqB7MTMtUIqEj5R21t2NSP9VZjY_HmcFPVo80U9oUsRL1aE7Frh6k5aQ/p.png?size=2048x1536&size_mode=3">
+
+    <div class="row">
+      <img style="width: 100%; padding: 5%;" src="https://previews.dropbox.com/p/thumb/AA80HiULHYg8keDiWOwfK2DHcmz93uP4EsWcL77OR1u0gnBBXA1ZMtQ-b5j81sIp4bn-pYCQKCDBjM6QIYoExREFYQPyWthDcPKZQvQno3ItMC16gYx5UsxD-MDSysIxdpeyOh06voIbA_0B2DSXzuIZ418t1c3v3Odo0kHXFEqpdaXDysL-w_6PRTEJeE7uOSM9S3A2VtiLUDGm93hXgljk7qJzBX7xZiR1YlTPNhTaCKg8-e6iyxgb4MbGEorHW9jw2jHrX0H7jrDIlkczHP_YcAE6OnXBr_g2hR3XBBnQXZp4kzPNWcNhum04tBk45c1sTasCvN6TaGuj8wIgiLnrxyJ9yFHQreFWXoa2Fq6t3Q/p.png?size=2048x1536&size_mode=3">
+      <div class="column-1">
+        <img src="https://previews.dropbox.com/p/thumb/AA9TtYy7ZmOgi5_oZ5ViTRz1eUJKKtJ3ZAunI8VAf20BLdQqwZO6Ve1GIAcz3iDn5Gts8EVxMpULvQMWxwusA6otlafTtEskx1_QYWoZWtCtjKyI_febvkpISmjhC8DD_R6ccUCM91X1WekMPBZ7la6HjjzzGM9uiiSH7cLrfxbHHpX_M5KCfzf6VXa-V7drQvXy-YVP6SJTEvIzdNRn8MyDJi86OK0Izzg2uxMUECnlc1CaGoyF_zQSVLxXunnZRA3GtuaLR-eFxiEY93XWOHdauwEyYFh2c3n62Ro4btJ4U2RjcBgGm8KCG56uBuo1XnIlpe8AG5lltpJfArbvpwpwyoNjUwoYpGnngRV5w7EgXw/p.png?size=2048x1536&size_mode=3"  style="width:100%">
+      </div>
+      <div class="column-2">
+        <img src="https://previews.dropbox.com/p/thumb/AA8z120GEsezXBj9LIK0dTsCfRLw4sPMYM69qbhTQBIMIpGVNDVXPm25eiwBelOy0kE8zKfJF7U8lW7IDDmT9JExn86c1JMdao0pBsl2SKv0yMKL2BBFUQ_dg2un_h0prCbF6NSEa3IxtdXU5wkaYOW_ncBiHtzfEhEhZgMojzAAdinWLUdRgCgyzhFOaMREmRFjfk5Jf5GReCNy2A3RxQJoifjoTt8TAJG6z5Mg56F0pxZof1VXk9HKQ3bc5IpArQQa8oCnxcxrZet4vp4inYeczvMdAp_6uLN1gcyQyeqhAcXZZQUKXiWqB7MTMtUIqEj5R21t2NSP9VZjY_HmcFPVo80U9oUsRL1aE7Frh6k5aQ/p.png?size=2048x1536&size_mode=3"  style="width:100%">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="column-4">
+        <img src="https://uc5207604f849bb878b66742fa4f.previews.dropboxusercontent.com/p/thumb/AA9-s3-k-ifmwUOQJRsRjIqqXaP1y6qncOQYTj8D_OGQI0VIExYZPpMkt8ZS_Kj5z6IMkT70DKYTZe_3pOek-dtpotbop3lDy4y1kbPi-mfVFk0iCV5f2uo4tYsyAHWLfVIcfBL9l0J03vWOLIBTnwW4MY5b7cg6A4EeNTFRzykVi7QdUftGWPEexeYl8GbVmr3zyUb_4RzxcfB2RsLUMFjeaQtA40oALLKTbguUrdB9lV5QhMi5cLUkNSmxKPlhZC7VXXybKeAxTxWBsuZQA69rA5Lr0ByYfGKj-iwC7MfQKhmmLWM3uyby8fAvUV5PY2Hv6ohO9d35sbwvQFWSTS9iYUwIJmeSIokUvWXRe59FaEVoI6szYz3ifPkC4xn82fY/p.jpeg?fv_content=true&size_mode=5" alt="Regular Pad" style="width:100%">
+        <h4>Bamboo Regular Pad</h4>
+        <h4 style="font-weight: bolder;">$3.00</h4>
+      </div>
+      <div class="column-3">
+        <img src="https://uc3fb6542f08e711e722ecdf4fd3.previews.dropboxusercontent.com/p/thumb/AA-Uxo6YgKFJ3KjESdkDznEknq9GYtCRdfxIIT9deOMgnhRm4syD1YfNRSt-Z2BI_C5ol4Zq1KQu2KMv8KAVmIU7PSOYrTdxGDzAc8Nmo9r2MUGwJcQSGTH9jaiAuUEWuCoUVM-8wzWZvJknfFawl9_2bhnjoI3zz7rxLVRj9fzaNBzgdATfuRNGEc-HOGPp3NR8nbDG55GWqas6KHU6Z-E15VBtMJ14G-_fRVCkkhOY9mhb9W15wU7mXDNSHEdwhfYZqUyH-CAPHOoSPFGr4HSuHX3Z91Pr0gOyeTmsDvHgmYbKTG4FFTr0tae4aA7f_QuaD_3MbGl-JAlKkZl7-rbsnThgN8_-os0IJ6U3WBTQhF49JhBKq9vMBJLVl0eNl5o/p.jpeg?fv_content=true&size_mode=5" alt="Super Pad" style="width:83%">
+        <h4>Bamboo Super Pad</h4>
+        <h4 style="font-weight: bolder;">$3.00</h4>
+      </div>
+      <div class="column-3">
+        <img src="https://uc49da60bb9218fe381d24a57d62.previews.dropboxusercontent.com/p/thumb/AA-lRe6AGNNhaWBRSn8CzNhEDCFr3kSV0C4b6Yq_J3MxIKyPv2OX8bJhtOFI0HoliiOV3PlgDVyjlJIqirRdTjx5wj-YjIpCnHilofMrPmHkPFUBt5aZvYtnv7FMjosIUIe7blGucCwJgGnP0Kvn5Xv3yo0oJBTXzpai_NCPc-g5tzoleHOCtPbYOCYowmvJiIbnmtraet3L19Jpr3NOkIIyy32M57OzAX_ZKKyPI7-GuVTNfDeO1sTj9B1ZbidfEmV3gsNPu6w5sj69IgSUTqagh5Fuu5KTAquxnokX4hOGX4FWY9E2s9c0CngTqfYyeC7gp0G6IhUlMYjtYMinF2AIb7yzS7__J60UUhsCUpG4vxgQxjR9ApOQGHLjSWwoGKU/p.jpeg?fv_content=true&size_mode=5" alt="Over Night Pad" style="width:83%">
+        <h4>Bamboo Overnight Pad</h4>
+        <h4 style="font-weight: bolder;">$3.00</h4>
+      </div>
+      <div class="column-5">
+        <img src="https://ucf0b377699672338ce89bee1831.previews.dropboxusercontent.com/p/thumb/AA8Z1-QN_c_lmyRrbJeYPgbWzyv0Dxk9rlClCWnl2L5_qTUDc05N7ZPoViLkgvx2Bcng1UDNyVyHEQxSAuTaXkoLlI5yL7Yf7LUm-72fXLb_sQENB-EuFwpMqVTZp0ZwR8nd_rvJBXCCOkTxzlWsphYD3Nc-Mx_PVKFRRoyVffHytNqK57velkpUdHvroUPmCwZ8r2XoRsoN-7hyxqQU76Yy8BGpF5Gay5yo3SDpc5ssPXWfuZCDHzXe4d2i-2gUT96FYOQqeAsW5Gjy4um2AKsp-42VLlRZwgSSskVnbi4ijz_MOV_GkNdF67gm9aHh9TCfCxlAkHL0YW_1REvrdYmfEvVK3AtwYmb-sT3K2hWZ4ccJkf6uiKJCHRQuGytF7Ss/p.jpeg?fv_content=true&size_mode=5" alt="Panty Liner" style="width:100%">
+        <h4>Bamboo Panty Liner</h4>
+        <h4 style="font-weight: bolder;">$3.00</h4>
+      </div>
     </div>
     
   </body>
