--- a/publicgoods.html
+++ b/publicgoods.html
@@ -56,24 +56,38 @@
 
     <div class="row">
       <div class="column-4">
-        <img src="https://uc5207604f849bb878b66742fa4f.previews.dropboxusercontent.com/p/thumb/AA9-s3-k-ifmwUOQJRsRjIqqXaP1y6qncOQYTj8D_OGQI0VIExYZPpMkt8ZS_Kj5z6IMkT70DKYTZe_3pOek-dtpotbop3lDy4y1kbPi-mfVFk0iCV5f2uo4tYsyAHWLfVIcfBL9l0J03vWOLIBTnwW4MY5b7cg6A4EeNTFRzykVi7QdUftGWPEexeYl8GbVmr3zyUb_4RzxcfB2RsLUMFjeaQtA40oALLKTbguUrdB9lV5QhMi5cLUkNSmxKPlhZC7VXXybKeAxTxWBsuZQA69rA5Lr0ByYfGKj-iwC7MfQKhmmLWM3uyby8fAvUV5PY2Hv6ohO9d35sbwvQFWSTS9iYUwIJmeSIokUvWXRe59FaEVoI6szYz3ifPkC4xn82fY/p.jpeg?fv_content=true&size_mode=5" alt="Regular Pad" style="width:100%">
-        <h4>Bamboo Regular Pad</h4>
-        <h4 style="font-weight: bolder;">$3.00</h4>
+          <a href="https://www.publicgoods.com/products/regular-bamboo-pad-12pk?_pos=2&_sid=4449956bd&_ss=r">
+          <img src="https://uc5207604f849bb878b66742fa4f.previews.dropboxusercontent.com/p/thumb/AA9-s3-k-ifmwUOQJRsRjIqqXaP1y6qncOQYTj8D_OGQI0VIExYZPpMkt8ZS_Kj5z6IMkT70DKYTZe_3pOek-dtpotbop3lDy4y1kbPi-mfVFk0iCV5f2uo4tYsyAHWLfVIcfBL9l0J03vWOLIBTnwW4MY5b7cg6A4EeNTFRzykVi7QdUftGWPEexeYl8GbVmr3zyUb_4RzxcfB2RsLUMFjeaQtA40oALLKTbguUrdB9lV5QhMi5cLUkNSmxKPlhZC7VXXybKeAxTxWBsuZQA69rA5Lr0ByYfGKj-iwC7MfQKhmmLWM3uyby8fAvUV5PY2Hv6ohO9d35sbwvQFWSTS9iYUwIJmeSIokUvWXRe59FaEVoI6szYz3ifPkC4xn82fY/p.jpeg?fv_content=true&size_mode=5" alt="Regular Pad" style="width:100%">
+          <h4>Bamboo Regular Pad</h4>
+          <h4 style="font-weight: bolder;">$3.00</h4>
+        </a>
       </div>
       <div class="column-3">
-        <img src="https://uc3fb6542f08e711e722ecdf4fd3.previews.dropboxusercontent.com/p/thumb/AA-Uxo6YgKFJ3KjESdkDznEknq9GYtCRdfxIIT9deOMgnhRm4syD1YfNRSt-Z2BI_C5ol4Zq1KQu2KMv8KAVmIU7PSOYrTdxGDzAc8Nmo9r2MUGwJcQSGTH9jaiAuUEWuCoUVM-8wzWZvJknfFawl9_2bhnjoI3zz7rxLVRj9fzaNBzgdATfuRNGEc-HOGPp3NR8nbDG55GWqas6KHU6Z-E15VBtMJ14G-_fRVCkkhOY9mhb9W15wU7mXDNSHEdwhfYZqUyH-CAPHOoSPFGr4HSuHX3Z91Pr0gOyeTmsDvHgmYbKTG4FFTr0tae4aA7f_QuaD_3MbGl-JAlKkZl7-rbsnThgN8_-os0IJ6U3WBTQhF49JhBKq9vMBJLVl0eNl5o/p.jpeg?fv_content=true&size_mode=5" alt="Super Pad" style="width:83%">
-        <h4>Bamboo Super Pad</h4>
-        <h4 style="font-weight: bolder;">$3.00</h4>
+        <a href="https://www.publicgoods.com/products/super-bamboo-pad-12pk?_pos=3&_sid=2ee1679f8&_ss=r">
+          <img src="https://uc3fb6542f08e711e722ecdf4fd3.previews.dropboxusercontent.com/p/thumb/AA-Uxo6YgKFJ3KjESdkDznEknq9GYtCRdfxIIT9deOMgnhRm4syD1YfNRSt-Z2BI_C5ol4Zq1KQu2KMv8KAVmIU7PSOYrTdxGDzAc8Nmo9r2MUGwJcQSGTH9jaiAuUEWuCoUVM-8wzWZvJknfFawl9_2bhnjoI3zz7rxLVRj9fzaNBzgdATfuRNGEc-HOGPp3NR8nbDG55GWqas6KHU6Z-E15VBtMJ14G-_fRVCkkhOY9mhb9W15wU7mXDNSHEdwhfYZqUyH-CAPHOoSPFGr4HSuHX3Z91Pr0gOyeTmsDvHgmYbKTG4FFTr0tae4aA7f_QuaD_3MbGl-JAlKkZl7-rbsnThgN8_-os0IJ6U3WBTQhF49JhBKq9vMBJLVl0eNl5o/p.jpeg?fv_content=true&size_mode=5" alt="Super Pad" style="width:83%">
+          <h4>Bamboo Super Pad</h4>
+          <h4 style="font-weight: bolder;">$3.00</h4>
+        </a>
       </div>
       <div class="column-3">
-        <img src="https://uc49da60bb9218fe381d24a57d62.previews.dropboxusercontent.com/p/thumb/AA-lRe6AGNNhaWBRSn8CzNhEDCFr3kSV0C4b6Yq_J3MxIKyPv2OX8bJhtOFI0HoliiOV3PlgDVyjlJIqirRdTjx5wj-YjIpCnHilofMrPmHkPFUBt5aZvYtnv7FMjosIUIe7blGucCwJgGnP0Kvn5Xv3yo0oJBTXzpai_NCPc-g5tzoleHOCtPbYOCYowmvJiIbnmtraet3L19Jpr3NOkIIyy32M57OzAX_ZKKyPI7-GuVTNfDeO1sTj9B1ZbidfEmV3gsNPu6w5sj69IgSUTqagh5Fuu5KTAquxnokX4hOGX4FWY9E2s9c0CngTqfYyeC7gp0G6IhUlMYjtYMinF2AIb7yzS7__J60UUhsCUpG4vxgQxjR9ApOQGHLjSWwoGKU/p.jpeg?fv_content=true&size_mode=5" alt="Over Night Pad" style="width:83%">
-        <h4>Bamboo Overnight Pad</h4>
-        <h4 style="font-weight: bolder;">$3.00</h4>
+        <a href="https://www.publicgoods.com/products/overnight-bamboo-pad-10pk?_pos=1&_sid=2ee1679f8&_ss=r">
+          <img src="https://uc49da60bb9218fe381d24a57d62.previews.dropboxusercontent.com/p/thumb/AA-lRe6AGNNhaWBRSn8CzNhEDCFr3kSV0C4b6Yq_J3MxIKyPv2OX8bJhtOFI0HoliiOV3PlgDVyjlJIqirRdTjx5wj-YjIpCnHilofMrPmHkPFUBt5aZvYtnv7FMjosIUIe7blGucCwJgGnP0Kvn5Xv3yo0oJBTXzpai_NCPc-g5tzoleHOCtPbYOCYowmvJiIbnmtraet3L19Jpr3NOkIIyy32M57OzAX_ZKKyPI7-GuVTNfDeO1sTj9B1ZbidfEmV3gsNPu6w5sj69IgSUTqagh5Fuu5KTAquxnokX4hOGX4FWY9E2s9c0CngTqfYyeC7gp0G6IhUlMYjtYMinF2AIb7yzS7__J60UUhsCUpG4vxgQxjR9ApOQGHLjSWwoGKU/p.jpeg?fv_content=true&size_mode=5" alt="Over Night Pad" style="width:83%">
+          <h4>Bamboo Overnight Pad</h4>
+          <h4 style="font-weight: bolder;">$3.00</h4>
+        </a>
       </div>
       <div class="column-5">
-        <img src="https://ucf0b377699672338ce89bee1831.previews.dropboxusercontent.com/p/thumb/AA8Z1-QN_c_lmyRrbJeYPgbWzyv0Dxk9rlClCWnl2L5_qTUDc05N7ZPoViLkgvx2Bcng1UDNyVyHEQxSAuTaXkoLlI5yL7Yf7LUm-72fXLb_sQENB-EuFwpMqVTZp0ZwR8nd_rvJBXCCOkTxzlWsphYD3Nc-Mx_PVKFRRoyVffHytNqK57velkpUdHvroUPmCwZ8r2XoRsoN-7hyxqQU76Yy8BGpF5Gay5yo3SDpc5ssPXWfuZCDHzXe4d2i-2gUT96FYOQqeAsW5Gjy4um2AKsp-42VLlRZwgSSskVnbi4ijz_MOV_GkNdF67gm9aHh9TCfCxlAkHL0YW_1REvrdYmfEvVK3AtwYmb-sT3K2hWZ4ccJkf6uiKJCHRQuGytF7Ss/p.jpeg?fv_content=true&size_mode=5" alt="Panty Liner" style="width:100%">
-        <h4>Bamboo Panty Liner</h4>
-        <h4 style="font-weight: bolder;">$3.00</h4>
+        <a href="https://www.publicgoods.com/products/bamboo-panty-liner-25pk?_pos=5&_sid=2ee1679f8&_ss=r">
+          <img src="https://ucf0b377699672338ce89bee1831.previews.dropboxusercontent.com/p/thumb/AA8Z1-QN_c_lmyRrbJeYPgbWzyv0Dxk9rlClCWnl2L5_qTUDc05N7ZPoViLkgvx2Bcng1UDNyVyHEQxSAuTaXkoLlI5yL7Yf7LUm-72fXLb_sQENB-EuFwpMqVTZp0ZwR8nd_rvJBXCCOkTxzlWsphYD3Nc-Mx_PVKFRRoyVffHytNqK57velkpUdHvroUPmCwZ8r2XoRsoN-7hyxqQU76Yy8BGpF5Gay5yo3SDpc5ssPXWfuZCDHzXe4d2i-2gUT96FYOQqeAsW5Gjy4um2AKsp-42VLlRZwgSSskVnbi4ijz_MOV_GkNdF67gm9aHh9TCfCxlAkHL0YW_1REvrdYmfEvVK3AtwYmb-sT3K2hWZ4ccJkf6uiKJCHRQuGytF7Ss/p.jpeg?fv_content=true&size_mode=5" alt="Panty Liner" style="width:100%">
+          <h4>Bamboo Panty Liner</h4>
+          <h4 style="font-weight: bolder;">$3.00</h4>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="shop-now">
+        <img src="https://previews.dropbox.com/p/thumb/AA9V8ZAfmCInmGC2IkqyHw21MCCBsyYeelUs5GWpXmTbqIR2a9AdUq1o_Ms1OctYvyff1DGt_wydyq6m--3LaAn5tbM2JqtyoWuN4_xV9IYipOxYlvAoq18v1E_IDJ1mTX0KDhr41vlf1hPKuA4JR29Uf_QO6XAukddzG_Ttok3ar2Brpai7ZzK48CgqPlSoRJZYme-tjDzmiNpZzCDdh9NQMNPgxx7-Al8XpoZfLiY3V20RF4Ysg7jP9se-25gP4tvd93pg0xAC9zllbkCr6IjREQXWVAUD2czpABtQgszsM771J4dxGyRwGxcc-82wlESOKA4hlQmyLLv7J5nOCcn2/p.png?size=2048x1536&size_mode=3" >
       </div>
     </div>
     
